--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,19 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": ">=2.14",
+        "doctrine/migrations": ">=3.8.3",
+        "doctrine/orm": "^3.3.2",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.5",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
-        "symfony/yaml": "7.2.*"
-    },
-    "require-dev": {
+        "symfony/security-bundle": "7.2.*",
+        "symfony/twig-bundle": "7.2.*",
+        "symfony/ux-icons": "^2.23",
+        "symfony/yaml": "7.2.*",
+        "twig/extra-bundle": "^3.20"
     },
     "config": {
         "allow-plugins": {
@@ -65,5 +70,10 @@
             "allow-contrib": false,
             "require": "7.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "7.2.*",
+        "symfony/maker-bundle": "^1.62.1",
+        "symfony/web-profiler-bundle": "7.2.*"
     }
 }
